feature: Hero Banner 3D + About page

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,6 +1,6 @@
 // Colors //
 
-$primaryColor: #ee7674;
+$primaryColor: #ff9000;
 $secondaryColor: #252422;
 $thirdColor: #fffffa;
 
@@ -8,5 +8,6 @@ $thirdColor: #fffffa;
 
 $titleFont: 'Josefin Sans', sans-serif;
 
+$small: 1rem;
 $large: 3rem;
 $x-large: 6rem;
