--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,11 +6,9 @@
   height: 100%;
   .container {
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 1fr 1fr;
-
-    .un {
-      color: blue;
-    }
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
+    height: 100%;
   }
 }
