--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,10 +13,10 @@ body {
 }
 
 #root {
-  height: 100svh;
   display: grid;
   grid-template-rows: 5rem 1fr;
   grid-template-areas:
     'header'
     'main';
+  min-height: 100svh;
 }
