--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -10,6 +10,9 @@
   position: sticky;
   grid-area: header;
   background-color: $secondaryColor;
+  box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
+  -webkit-box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
+  -moz-box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
 }
 
 .navbar {
