--- a/src/styles/aPropos.scss
+++ b/src/styles/aPropos.scss
@@ -1,31 +1,58 @@
 @import './settings.scss';
-.container {
-  background-color: #252422;
+.apropos-container {
+  // background-color: $secondaryColor;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   justify-items: center;
   align-items: center;
+  &.apropos-container::before {
+    content: '';
+    background-image: url('../img/marbre-noir.jpg');
+    background-size: cover;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
 
-  .pp {
-    font-size: $small;
-    object-fit: cover;
-    height: 50%;
-    border-radius: 50%;
-    box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
-    -webkit-box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
-    -moz-box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
+    z-index: -1;
   }
-  .aPropos {
+
+  .apropos {
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr;
     color: $thirdColor;
     line-height: 3rem;
     width: 100%;
-    max-width: 30rem;
-    justify-self: left;
+    max-width: 70rem;
+    justify-self: center;
+    backdrop-filter: blur(1px); // Ajout de l'effet de flou pour le verre
+    background: linear-gradient(
+      45deg,
+      rgba(255, 251, 251, 0.12) 1%,
+      rgba(0, 0, 0, 0.237) 75%
+    );
+    border: solid 1px rgba(255, 255, 255, 0.052);
+    border-radius: 5px;
+    padding: 4rem;
+    -webkit-box-shadow: 1px 5px 7px 1px #000000;
+    box-shadow: 1px 5px 7px 1px #000000;
 
-    .aPropos-title {
+    .pp {
+      font-size: $small;
+      object-fit: cover;
+      height: 20rem;
+      border-radius: 1%;
+      box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
+      -webkit-box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
+      -moz-box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
+    }
+    .apropos-title {
       position: relative;
     }
-    .aPropos-title:after {
+    .apropos-title:after {
       content: '';
       position: absolute;
       bottom: -5%;
