--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -12,8 +12,10 @@
   width: 100%;
   height: 100%;
   position: sticky;
+  top: 0;
+  z-index: 2;
   grid-area: header;
-  background-color: $secondaryColor;
+
   box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
   -webkit-box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
   -moz-box-shadow: 0px 9px 11px -3px rgba(13, 13, 13, 0.75);
@@ -58,6 +60,9 @@
     text-transform: uppercase;
     transition: all 0.5s;
     overflow: hidden;
+  }
+  a:hover {
+    color: $primaryColor;
   }
   a:after,
   a:visited:after {
