--- a/src/styles/stack-card.scss
+++ b/src/styles/stack-card.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 15rem;
-  width: 20rem;
+  width: 100%;
   justify-content: center;
   align-items: center;
   border-radius: 5px;
